# nut-monitor

./: Cargo.toml  Dockerfile  GEMINI.md  docker-compose.yml
.agents/: AGENTS.md
.github/workflows/: build.yml
src/: alerts.rs  dashboard.rs  main.rs  metrics.rs  template.html  web.rs
templates/: template.html
