[package]
name = "nut-monitor-web"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

# Turn off default features (which include native-tls) and use rustls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }